Ensure that the outline tab panel is visible
The DOM structure changed while implementing the new, accessible tabs, and these styles needed to be adjusted so that the tab panel content will have height and therefore be visible.

--- a/src/components/PrimaryPanes/Sources.css
+++ b/src/components/PrimaryPanes/Sources.css
@@ -130,7 +130,7 @@
 
 .sources-panel .outline {
   display: flex;
-  flex: 1;
+  height: 100%;
 }
 
 .tree-indent {
@@ -184,6 +184,10 @@
 .source-outline-tabs .tab.active path,
 .source-outline-tabs .tab:hover path {
   fill: var(--theme-body-color);
+}
+
+.source-outline-panel {
+  flex: 1;
 }
 
 .sources-list .managed-tree .tree .node img.blackBox {
